# telegrify

./: PUBLISHING.md  README.md  TODO.md  USAGE.md  llms.txt  pyproject.toml
telegrify/cli/: commands.py
telegrify/core/: config.py
telegrify/server/: app.py
telenotif/: __init__.py  __version__.py
telenotif/core/: __init__.py  bot.py  config.py  interfaces.py  registry.py
telenotif/formatters/: __init__.py  base.py  markdown.py  plain.py
telenotif/server/: routes.py
telenotif/utils/: __init__.py  validators.py
templates/: README.md.template  config.yaml.template  main.py.template
templates/plugins/: example_formatter.py.template
